# ps-sig

./: .travis.yml  Cargo.toml  README.md  REVIEW.md  SUMMARY.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: blind_signature.rs  errors.rs  keys.rs  lib.rs  multi_signature.rs  pok_sig.rs  pok_sig_2018.rs  pok_vc.rs  signature.rs  signature_2018.rs
tests/: scenario.rs  test_vectors_generator.rs
tests/data/2018/: revealed_indices.txt
