[package]
name = "ps_sig"
version = "0.1.2"
authors = ["lovesh <lovesh.bond@gmail.com>"]
edition = "2018"
description = "Pointcheval Sanders signatures"
license = "Apache-2.0"
repository = "https://github.com/lovesh/ps-sig"

[dependencies]
rand = "0.6"
failure = "0.1.5"
serde = "1.0"
serde_derive = "1.0"

[dependencies.amcl_wrapper]
version = "0.1.7"
default-features = false
features = ["bls381"]

[features]
default = ["SignatureG2"]
SignatureG2 = []
SignatureG1 = []