[package]
name = "ps_sig"
version = "0.3.0"
authors = ["lovesh <lovesh.bond@gmail.com>"]
edition = "2021"
description = "Pointcheval Sanders signatures"
license = "Apache-2.0"
repository = "https://github.com/lovesh/ps-sig"

[dependencies]
thiserror = { version = "2.0", default-features = false }
digest = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1.7", default-features = false }

ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
ark-std = { version = "0.5", default-features = false }

[dev-dependencies]
ark-bls12-381 = { version = "0.5", default-features = false, features = ["curve"] }
ark-bls12-377 = { version = "0.5", default-features = false, features = ["curve"] }
ark-bn254 = { version = "0.5", default-features = false, features = ["curve"] }
rand = "0.8"

[features]
default = ["std"]
std = [
    "ark-ec/std",
    "ark-ff/std",
    "ark-serialize/std",
    "ark-std/std",
    "digest/std",
    "sha2/std",
]
parallel = ["ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel"]
